@@ -114,6 +114,18 @@
       <artifactId>slf4j-jdk14</artifactId>
       <version>2.0.9</version> <!--Replace with appropriate version-->
     </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>5.11.0</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.testfx</groupId>
+          <artifactId>testfx-junit5</artifactId>
+          <version>4.0.18</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
@@ -147,6 +159,15 @@
           </execution>
         </executions>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+                <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+                <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
